--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,16 +14,16 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
+  //          "MIMode": "gdb",
+  //          "setupCommands": [
+  //              {
+  //                  "description": "Enable pretty-printing for gdb",
+  //                  "text": "-enable-pretty-printing",
+  //                  "ignoreFailures": true
+  //              }
+  //          ],
             "preLaunchTask": "C/C++: gcc build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
+  //          "miDebuggerPath": "/usr/bin/gdb"
         },
         {
             "name": "(lldb) Build and debug active file",
