--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "gcc - Build and debug active file",
             "type": "cppdbg",
@@ -36,6 +37,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "lldb",
+            "miDebuggerPath": "/usr/bin/lldb-mi" ,
             "preLaunchTask": "C/C++: clang build active file"
         }
     ]
