add 443 string-compression;add windows gdb to tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,21 @@
 				"$gcc"
 			],
 			"group": "build"
-		}
+		},
+		{
+            "type": "shell",
+            "label": "windows g++",
+            "command": "g++",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}\\a.out"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build"
+        }
 	]
 }
