1. add __XGH_TEST macro to copy&paste code without edit; 2. add 51 N queen;

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,7 @@
 			"label": "C/C++: clang build active file",
 			"command": "/usr/bin/clang",
 			"args": [
+				"-D __XGH_TEST__",
 				"-fsanitize=address",
 				"-g",
 				"${file}",
